@@ -33,9 +33,10 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] SECURITY: Fix XSS when flagging a message in dynamic view with a user-defined flag (João Machado &lt;geral@jpaulo.eu&gt;).
+* [mms] Fix regression where reloading dynamic view would not load the previously selected message.
 * [mms] Fixed regression in enforcing max_recipients and max_timelimit permissions (Bug #12674).
 * [mms] Correctly enforce file size attachment limits on the first attachment (Bug #12663).
-* [mms] SECURITY: Fix XSS when flagging a message in dynamic view with a user-defined flag (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] Don&apos;t attempt to get quota information from non-IMAP mailboxes (Bug #12608).
 * [jan] Don&apos;t attach address book behavior if contacts API is unavailable.
 * [mms] Fix regression where MIME headers were being displayed for PGP decrypted messages (Bug #12648).
@@ -3291,6 +3292,7 @@
    <date>2013-09-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression where reloading dynamic view would not load the previously selected message.
 * [mms] Fixed regression in enforcing max_recipients and max_timelimit permissions (Bug #12674).
 * [mms] Correctly enforce file size attachment limits on the first attachment (Bug #12663).
 * [mms] SECURITY: Fix XSS when flagging a message in dynamic view with a user-defined flag (João Machado &lt;geral@jpaulo.eu&gt;).
