@@ -2,12 +2,14 @@
 v6.1.5-git
 ----------
 
+[mms] SECURITY: Fix XSS when flagging a message in dynamic view with a
+      user-defined flag (João Machado <geral@jpaulo.eu>).
+[mms] Fix regression where reloading dynamic view would not load the previously
+      selected message.
 [mms] Fixed regression in enforcing max_recipients and max_timelimit
       permissions (Bug #12674).
 [mms] Correctly enforce file size attachment limits on the first attachment
       (Bug #12663).
-[mms] SECURITY: Fix XSS when flagging a message in dynamic view with a
-      user-defined flag (João Machado <geral@jpaulo.eu>).
 [mms] Don't attempt to get quota information from non-IMAP mailboxes (Bug
       #12608).
 [jan] Don't attach address book behavior if contacts API is unavailable.
